# studyNote

./: Django.txt  Flask.txt  Redis.txt  VS Code.txt  cmake.txt  crawler.txt  datastructure.txt  docker.txt  gcc.txt  git.txt  interview.txt  interview_mes.txt  interview_python.txt  interview_sql.txt  interview_vcpkg.txt  json.txt  linux.txt  make.txt  mysql.txt  powershell.txt  python3.txt  shell.txt  sqlalchemy.txt  svn.txt  visual studio.txt  国内镜像源.txt
Grid/Grid/: asgi.py  settings.py  urls.py  wsgi.py
Grid/api/: models.py  serializers.py  views.py
Grid/api/migrations/: 0001_initial.py  0002_processdata_productiondata.py
HelloDjango/: db.sqlite3
HelloDjango/HelloDjango/: search.py  search_post.py  settings.py  testdb.py  urls.py  views.py
HelloDjango/happy/: admin.py  hforms.py  middleware.py  models.py  urls.py  views.py
HelloDjango/happy/migrations/: 0001_initial.py  0002_alter_book_price.py  0003_dep_emp_emps.py
HelloDjango/happy/templates/: add_emp.html  base_happy.html  home.html  login.html  profile.html  register.html
HelloDjango/my_test/: admin.py  models.py
HelloDjango/my_test/migrations/: 0001_initial.py  0002_test_age.py  0003_alter_test_table.py  0004_contact_tag.py  0005_alter_contact_email.py  0006_alter_contact_name.py
HelloDjango/my_test/templatetags/: custom_filter.py
HelloDjango/templates/: base.html  hello.html  search_form.html  search_post.html  test.html
HelloFlask/: .env  config.py  requirements.txt  run.py
HelloFlask/app/: __init__.py  extensions.py
HelloFlask/app/models/: post.py  user.py
HelloFlask/app/routes/: auth.py  blog.py  errors.py  user.py
HelloFlask/app/static/css/: auth.css  blog.css  style.css
HelloFlask/app/templates/: base.html
HelloFlask/app/templates/auth/: login.html  register.html
HelloFlask/app/templates/blog/: create.html  edit.html  index.html  post.html
HelloFlask/app/templates/errors/: 403.html  404.html  500.html
HelloFlask/app/templates/user/: profile.html
HelloFlask/migrations/versions/: 6ff0a2576661_initial_migration.py  95b26a0644ed_increase_password_hash_field_length.py
MobileInspection/: app.py  config.py  requirements.txt
MobileInspection/static/css/: style.css
MobileInspection/static/js/: api.js  scanner.js  ui.js
MobileInspection/templates/: base.html  cable_info.html  index.html
StateGrid/: app.py  cert.pem  config.py  data_processor.py  generate_cert.py  grid_api.py  key.pem  mock_grid_api.py  models.py  test_api.py
VcpkgManager/: main.py
VcpkgManager/config/: labels.py  settings.py
VcpkgManager/core/: assigner.py  classifier.py  github_api.py  validator.py
vcpkg/: vcpkg.txt
vcpkg-export-usage/export_test/: export_test.cpp  export_test.h
vcpkg-export-usage/usage_test/: CMakeLists.txt  export_test.cpp
vcpkg-registry/filesystem-registry/ports/beison/1.0.1/: portfile.cmake
vcpkg-registry/filesystem-registry/versions/: baseline.json
vcpkg-registry/filesystem-registry/versions/b-/: beison.json
vcpkg-registry/test-registry/: main.cpp  vcpkg-configuration.json  vcpkg.json
vcpkg/vcpkg-export-usage/export_test/: CMakeLists.txt
vcpkg/vcpkg-registry/filesystem-registry/ports/beison/1.0.0/: portfile.cmake  vcpkg.json
vcpkg/vcpkg-registry/filesystem-registry/ports/beison/1.0.1/: vcpkg.json
vcpkg/vcpkg-registry/test-registry/: CMakeLists.txt
